packages/plugin-schema-macros/tests/ui/fail/unknown_type.stderr
error: validation error: unknown type `missing-type` referenced in interface `i`
 --> tests/ui/fail/unknown_type.rs:1:1
  |
1 | / bmux_plugin_schema_macros::schema_inline!(
2 | |     r#"
3 | | plugin p version 1;
... |
8 | | "#
9 | | );
  | |_^
  |
  = note: this error originates in the macro `bmux_plugin_schema_macros::schema_inline` (in Nightly builds, run with -Z macro-backtrace for more info)
